# check

./: .eslintrc.js  .gitignore  .prettierrc  .yarnrc.yml  Anchor.toml  README.md  jest.config.ts  package.json  tsconfig.json
.github/workflows/: pr.yml  publish-github.yml  publish.yml
examples/private-pool/: Anchor.toml  README.md  jest.config.ts  package.json  tsconfig.json
examples/private-pool/programs/private-pool/: Cargo.toml
examples/private-pool/programs/private-pool/src/: lib.rs
examples/private-pool/test/: deposit.test.ts  mocks.ts  utils.ts
migrations/: deploy.ts
programs/check/: Cargo.toml
programs/check/src/: lib.rs  utils.rs
programs/check/src/state/: attestation.rs  claim_type.rs  mod.rs
test/: attestation.test.ts  claimType.test.ts  utils.ts
tutorial/: README.md  index.ts  package.json  tsconfig.json
