[package]
name = "check"
version = "0.1.0"
description = "Verifiable credentials in the Web 3.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "check"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.24.2"
thiserror = "1.0.29"
bs58 = "0.4.0"
borsh = "0.9.3"
