[package]
name = "check"
version = "0.1.0"
description = "Verifiable credentials in the Web 3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "check"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "=0.29.0"
thiserror = "1.0.63"
bs58 = "0.5.1"
borsh = "1.5.1"
